--- a/college-student-tracker/package.json
+++ b/college-student-tracker/package.json
@@ -22,8 +22,11 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run build",
+    "install-client": "npm install",
+    "heroku-postbuild" : "npm run install-client && npm run build",
+    "backend": "cd backend && nodemon server.js",
+    "start": "concurrently --kill-others-on-fail \"npm run backend\" \"npm run start --prefix client\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
