--- a/college-student-tracker/package.json
+++ b/college-student-tracker/package.json
@@ -26,7 +26,7 @@
     "install-client": "npm install",
     "heroku-postbuild" : "npm run install-client && npm run build",
     "backend": "cd backend && nodemon server.js",
-    "start": "concurrently --kill-others-on-fail \"npm run backend\" \"npm run start --prefix client\"",
+    "start": "\"npm backend\" \"npm run start\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
