--- a/college-student-tracker/package.json
+++ b/college-student-tracker/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.1",
     "chart.js": "^3.5.1",
+    "concurrently": "^6.2.1",
     "mongoose-data-faker": "^0.1.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
@@ -22,11 +23,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "build": "npm run build",
-    "install-client": "npm install",
-    "heroku-postbuild" : "npm run install-client && npm run build",
-    "backend": "cd backend && nodemon server.js",
-    "start": "\"npm backend\" \"npm run start\"",
+    "start": "concurrently \"react-scripts start \"  \"cd backend && nodemon server\"",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
